--- a/package.json
+++ b/package.json
@@ -3,10 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "assert": "^2.1.0",
+    "axios": "^0.21.1",
+    "browserify-zlib": "^0.2.0",
+    "buffer": "^6.0.3",
     "cra-template": "1.2.0",
+    "process": "^0.11.10",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-scripts": "5.0.1"
+    "react-router-dom": "^7.1.3",
+    "react-scripts": "5.0.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "util": "^0.12.5"
   },
   "scripts": {
     "start": "react-scripts start",
